--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 </head>
 
 <body>
-    <!--
     <div class="navbar">
         <div class="navvbar-contents">
+            <img src="images/logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact</a></li>
-              </ul>
-        </div>
+            </ul>
+        </div>  
     </div>
-    -->
     
     <div class="top-container">
         <h1>I'm Vignesh.</h1>
@@ -34,8 +33,10 @@
         <h2>Profile</h2>
         <div class="profile">
           <img src="images/profile img.png" alt="profile" class="profile_img">
-          <p>Myself:</p>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+            <p>
+                Hello! I have always been inquisitively inclined towards creative art and hence identify myself as an artist and designer.
+                2018 was the year where I felt confident to express my work and content on public platforms and commissions.    
+            </p>
         </div>
     </div>
 
@@ -45,13 +46,23 @@
         <h2>Skills</h2>
         <div class="skill">
             <img src="images/skill_1.png" alt="skills" class="skill_img_1">
-            <p>Skill Set 1:</p>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+            <p>UI/UX</p>
+            <p>I curate extraordinary designs that are out-of-the-box and fairly unique. To help better portray the captivating designs, I also develop mock-ups that aid in better understanding my work.</p>
         </div>
         <div class="skill">
             <img src="images/skill_2.png" alt="skills" class="skill_img_2">
-            <p>Skill Set 2:</p>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+            <p>Graphic Designer</p>
+            <p>Be it for a high scale or low scale organization. I take great effort in understanding customer requirements and aptly presenting it using my creative skills to increase customer satisfaction.</p>
+        </div>
+        <div class="skill">
+            <img src="images/skill_3.png" alt="skills" class="skill_img_1">
+            <p>Cinematography</p>
+            <p>I also take great interest in editing and cinematography. I often post my creative visuals, tips and tricks for beginners and other artists on my social media platforms.</p>
+        </div>
+        <div class="skill">
+            <img src="images/skill_4.png" alt="skills" class="skill_img_2">
+            <p>Editing</p>
+            <p>I have also developed skills in various softwares like Photoshop, XD, Illustrator, Premier Pro, After Effects, Figma, Resolve and Blender to improve the quality of my work.</p>
         </div>
     </div>
 
@@ -59,7 +70,7 @@
 
     <div class="Contact">
         <img src="images/see_ya.png" alt="see_ya" class="see_ya">
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p>“ If you can dream it, you can do it ”</p>
     </div>
     
     <hr>
